--- a/Pear/Controllers/Request Profile Flow/RequestProfileViewController.storyboard
+++ b/Pear/Controllers/Request Profile Flow/RequestProfileViewController.storyboard
@@ -30,24 +30,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Request a Profile" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="x2c-mm-Q1l">
-                                <rect key="frame" x="20" y="96" width="335" height="38.5"/>
+                                <rect key="frame" x="20" y="40" width="335" height="38.5"/>
                                 <fontDescription key="fontDescription" name="OpenSans-SemiBold" family="Open Sans SemiBold" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We'll send a friend a link to make you a profile." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5v-79-RJM">
-                                <rect key="frame" x="20" y="142.5" width="335" height="53"/>
+                                <rect key="frame" x="20" y="86.5" width="335" height="51.5"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="22"/>
                                 <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-notify-friend" translatesAutoresizingMaskIntoConstraints="NO" id="0WA-S1-JpP">
-                                <rect key="frame" x="157.5" y="28" width="60" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="0WA-S1-JpP" secondAttribute="height" multiplier="1:1" id="Jed-jn-6Jg"/>
-                                    <constraint firstAttribute="height" constant="60" id="xqn-4u-Gcf"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pmo-0z-RQS">
                                 <rect key="frame" x="20" y="535" width="335" height="50"/>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -60,29 +53,22 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WxS-OD-rZf">
-                                <rect key="frame" x="20" y="207.5" width="335" height="70"/>
+                                <rect key="frame" x="20" y="150" width="335" height="70"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rln-TY-7QH">
-                                        <rect key="frame" x="64.5" y="19" width="264.5" height="47"/>
+                                        <rect key="frame" x="49" y="19" width="280" height="47"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="18"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardType="phonePad" textContentType="tel"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Their Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kec-0a-7g4">
-                                        <rect key="frame" x="10" y="6" width="95.5" height="13"/>
+                                        <rect key="frame" x="10" y="6" width="102" height="13"/>
                                         <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="11"/>
                                         <color key="textColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-us-flag" translatesAutoresizingMaskIntoConstraints="NO" id="hNc-fI-jmh">
-                                        <rect key="frame" x="10" y="30.5" width="24" height="24"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="24" id="alb-Wo-lBy"/>
-                                            <constraint firstAttribute="height" constant="24" id="oUa-UZ-efd"/>
-                                        </constraints>
-                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aW3-oG-aIZ">
-                                        <rect key="frame" x="38" y="32" width="18.5" height="21"/>
+                                        <rect key="frame" x="20" y="32" width="21" height="21"/>
                                         <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="18"/>
                                         <color key="textColor" red="0.62352941179999999" green="0.64313725489999995" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -94,13 +80,10 @@
                                     <constraint firstItem="aW3-oG-aIZ" firstAttribute="centerY" secondItem="rln-TY-7QH" secondAttribute="centerY" id="56Y-SZ-jyp"/>
                                     <constraint firstItem="Kec-0a-7g4" firstAttribute="leading" secondItem="WxS-OD-rZf" secondAttribute="leading" constant="10" id="6ux-ym-VL2"/>
                                     <constraint firstAttribute="trailing" secondItem="rln-TY-7QH" secondAttribute="trailing" constant="6" id="Ilm-zc-Pjy"/>
-                                    <constraint firstItem="hNc-fI-jmh" firstAttribute="leading" secondItem="Kec-0a-7g4" secondAttribute="leading" id="SCK-W2-dcq"/>
-                                    <constraint firstItem="aW3-oG-aIZ" firstAttribute="leading" secondItem="hNc-fI-jmh" secondAttribute="trailing" constant="4" id="Xy3-Kz-G0X"/>
+                                    <constraint firstItem="aW3-oG-aIZ" firstAttribute="leading" secondItem="WxS-OD-rZf" secondAttribute="leading" constant="20" id="Pqw-zF-OwL"/>
                                     <constraint firstAttribute="bottom" secondItem="rln-TY-7QH" secondAttribute="bottom" constant="4" id="dYH-aG-jbk"/>
                                     <constraint firstItem="Kec-0a-7g4" firstAttribute="top" secondItem="WxS-OD-rZf" secondAttribute="top" constant="6" id="heh-d6-GOs"/>
-                                    <constraint firstItem="aW3-oG-aIZ" firstAttribute="centerY" secondItem="hNc-fI-jmh" secondAttribute="centerY" id="i26-5C-Gbu"/>
                                     <constraint firstAttribute="height" constant="70" id="vbW-4s-vuR"/>
-                                    <constraint firstItem="hNc-fI-jmh" firstAttribute="centerY" secondItem="rln-TY-7QH" secondAttribute="centerY" id="wbc-H1-FXC"/>
                                     <constraint firstItem="rln-TY-7QH" firstAttribute="leading" secondItem="aW3-oG-aIZ" secondAttribute="trailing" constant="8" id="ww1-oA-c6M"/>
                                 </constraints>
                             </view>
@@ -117,7 +100,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qX3-FB-3sC">
-                                <rect key="frame" x="20" y="303" width="335" height="50"/>
+                                <rect key="frame" x="20" y="245.5" width="335" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Ijn-1K-i6H"/>
                                 </constraints>
@@ -132,21 +115,18 @@
                             <constraint firstItem="qX3-FB-3sC" firstAttribute="centerX" secondItem="zZq-Ol-YFL" secondAttribute="centerX" id="07r-Aa-Nn4"/>
                             <constraint firstItem="1nk-FI-PDH" firstAttribute="leading" secondItem="zZq-Ol-YFL" secondAttribute="leading" constant="20" id="3rE-CE-zV1"/>
                             <constraint firstItem="zZq-Ol-YFL" firstAttribute="bottom" secondItem="1nk-FI-PDH" secondAttribute="bottom" constant="20" id="HlM-Cu-AnL"/>
-                            <constraint firstItem="0WA-S1-JpP" firstAttribute="top" secondItem="zZq-Ol-YFL" secondAttribute="top" constant="8" id="J4h-QX-3cD"/>
                             <constraint firstItem="zZq-Ol-YFL" firstAttribute="trailing" secondItem="pmo-0z-RQS" secondAttribute="trailing" constant="20" id="MxQ-Ua-cwv"/>
                             <constraint firstItem="zZq-Ol-YFL" firstAttribute="trailing" secondItem="f5v-79-RJM" secondAttribute="trailing" constant="20" id="Q2W-f3-5ws"/>
+                            <constraint firstItem="x2c-mm-Q1l" firstAttribute="top" secondItem="zZq-Ol-YFL" secondAttribute="top" constant="20" id="SYw-H3-WUY"/>
                             <constraint firstItem="zZq-Ol-YFL" firstAttribute="trailing" secondItem="1nk-FI-PDH" secondAttribute="trailing" constant="20" id="TEw-oP-4KO"/>
                             <constraint firstItem="x2c-mm-Q1l" firstAttribute="leading" secondItem="zZq-Ol-YFL" secondAttribute="leading" constant="20" id="UED-hZ-dHM"/>
                             <constraint firstItem="qX3-FB-3sC" firstAttribute="leading" secondItem="zZq-Ol-YFL" secondAttribute="leading" constant="20" id="WEW-lN-70M"/>
                             <constraint firstItem="WxS-OD-rZf" firstAttribute="leading" secondItem="zZq-Ol-YFL" secondAttribute="leading" constant="20" id="WfM-4C-yur"/>
-                            <constraint firstItem="x2c-mm-Q1l" firstAttribute="top" secondItem="0WA-S1-JpP" secondAttribute="bottom" constant="8" id="ZWG-OS-Bh3"/>
                             <constraint firstItem="pmo-0z-RQS" firstAttribute="leading" secondItem="zZq-Ol-YFL" secondAttribute="leading" constant="20" id="aBN-vV-FVu"/>
                             <constraint firstItem="zZq-Ol-YFL" firstAttribute="trailing" secondItem="x2c-mm-Q1l" secondAttribute="trailing" constant="20" id="bll-vt-Ooz"/>
                             <constraint firstItem="zZq-Ol-YFL" firstAttribute="trailing" secondItem="qX3-FB-3sC" secondAttribute="trailing" constant="20" id="cRd-hb-kIX"/>
-                            <constraint firstItem="0WA-S1-JpP" firstAttribute="width" secondItem="0WA-S1-JpP" secondAttribute="height" multiplier="1:1" id="dIg-qQ-E0y"/>
                             <constraint firstItem="f5v-79-RJM" firstAttribute="leading" secondItem="zZq-Ol-YFL" secondAttribute="leading" constant="20" id="f76-0O-Da8"/>
                             <constraint firstItem="1nk-FI-PDH" firstAttribute="centerX" secondItem="zZq-Ol-YFL" secondAttribute="centerX" id="hn9-X9-7cW"/>
-                            <constraint firstItem="0WA-S1-JpP" firstAttribute="centerX" secondItem="zZq-Ol-YFL" secondAttribute="centerX" id="iBX-w1-0Yy"/>
                             <constraint firstItem="qX3-FB-3sC" firstAttribute="top" secondItem="WxS-OD-rZf" secondAttribute="bottom" constant="25.5" id="iIm-9Z-LPZ"/>
                             <constraint firstItem="pmo-0z-RQS" firstAttribute="centerX" secondItem="zZq-Ol-YFL" secondAttribute="centerX" id="ive-ba-jtx"/>
                             <constraint firstItem="1nk-FI-PDH" firstAttribute="top" secondItem="pmo-0z-RQS" secondAttribute="bottom" constant="12" id="jOr-ZV-OQm"/>
@@ -172,8 +152,4 @@
             <point key="canvasLocation" x="433" y="42"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="onboarding-icon-notify-friend" width="512" height="512"/>
-        <image name="onboarding-icon-us-flag" width="80" height="81"/>
-    </resources>
 </document>
