--- a/Pear/Controllers/Profiles/Question Response Item/ProfileQuestionResponseViewController.storyboard
+++ b/Pear/Controllers/Profiles/Question Response Item/ProfileQuestionResponseViewController.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -22,60 +23,103 @@
             <objects>
                 <viewController id="nA0-fT-dvM" customClass="ProfileQuestionResponseViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="i65-yA-O9q"/>
-                        <viewControllerLayoutGuide type="bottom" id="gqK-d5-j2U"/>
+                        <viewControllerLayoutGuide type="top" id="cZ2-OJ-fAI"/>
+                        <viewControllerLayoutGuide type="bottom" id="3Ps-P5-FzG"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="enh-NA-9Fy">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <stackView key="view" opaque="NO" contentMode="scaleToFill" axis="vertical" id="Jfe-sz-G5s">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-question-response" translatesAutoresizingMaskIntoConstraints="NO" id="oj2-9Y-O61">
-                                <rect key="frame" x="10" y="54" width="40" height="40"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gCG-4t-E4t">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="20"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="cSN-Jg-ifL"/>
-                                    <constraint firstAttribute="width" secondItem="oj2-9Y-O61" secondAttribute="height" multiplier="1:1" id="o69-88-wXg"/>
+                                    <constraint firstAttribute="height" constant="20" id="RTm-Oe-Ujv"/>
                                 </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="R5a-C2-ga2">
-                                <rect key="frame" x="58" y="48" width="324" height="114"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0vG-bW-4hc">
+                                <rect key="frame" x="0.0" y="20" width="414" height="56"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="What time’s their ideal date?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uQZ-Sj-LhA">
-                                        <rect key="frame" x="0.0" y="0.0" width="324" height="62"/>
-                                        <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9CV-c3-S2a">
-                                        <rect key="frame" x="0.0" y="66" width="324" height="22"/>
-                                        <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="16"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kri-kw-OAA">
-                                        <rect key="frame" x="0.0" y="92" width="324" height="22"/>
-                                        <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
-                                        <nil key="textColor"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="writtenByThumbnailPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="zjY-va-XYJ">
+                                        <rect key="frame" x="16" y="8" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="zjY-va-XYJ" secondAttribute="height" multiplier="1:1" id="oa8-Zm-6OA"/>
+                                            <constraint firstAttribute="height" constant="40" id="xbV-zc-HRP"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qA7-dW-gG6">
+                                        <rect key="frame" x="68" y="18.5" width="334" height="19.5"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
+                                        <color key="textColor" name="primaryTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                            </stackView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="qA7-dW-gG6" firstAttribute="leading" secondItem="zjY-va-XYJ" secondAttribute="trailing" constant="12" id="67J-nE-uS3"/>
+                                    <constraint firstAttribute="trailing" secondItem="qA7-dW-gG6" secondAttribute="trailing" constant="12" id="Jcb-hk-X6U"/>
+                                    <constraint firstItem="zjY-va-XYJ" firstAttribute="top" secondItem="0vG-bW-4hc" secondAttribute="top" constant="8" id="VMi-LI-apB"/>
+                                    <constraint firstItem="qA7-dW-gG6" firstAttribute="centerY" secondItem="zjY-va-XYJ" secondAttribute="centerY" id="ghe-eB-X1V"/>
+                                    <constraint firstItem="zjY-va-XYJ" firstAttribute="leading" secondItem="0vG-bW-4hc" secondAttribute="leading" constant="16" id="i5g-5m-XJS"/>
+                                    <constraint firstAttribute="bottom" secondItem="zjY-va-XYJ" secondAttribute="bottom" constant="8" id="kzc-mI-45b"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MxL-TF-z4h">
+                                <rect key="frame" x="0.0" y="76" width="414" height="144"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5zZ-9h-xas">
+                                        <rect key="frame" x="16" y="8" width="386" height="128"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
+                                        <color key="textColor" name="primaryTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="5zZ-9h-xas" firstAttribute="top" secondItem="MxL-TF-z4h" secondAttribute="top" constant="8" id="8kO-ef-h2T"/>
+                                    <constraint firstAttribute="bottom" secondItem="5zZ-9h-xas" secondAttribute="bottom" constant="8" id="fC7-OF-4Hd"/>
+                                    <constraint firstAttribute="trailing" secondItem="5zZ-9h-xas" secondAttribute="trailing" constant="12" id="lAw-vt-31c"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="czO-3s-dkh">
+                                <rect key="frame" x="0.0" y="220" width="414" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lWI-2X-ToF">
+                                        <rect key="frame" x="16" y="8" width="386" height="34"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="24"/>
+                                        <color key="textColor" name="primaryTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="lWI-2X-ToF" firstAttribute="centerY" secondItem="czO-3s-dkh" secondAttribute="centerY" id="ABU-Dp-pGm"/>
+                                    <constraint firstItem="lWI-2X-ToF" firstAttribute="top" secondItem="czO-3s-dkh" secondAttribute="top" constant="8" id="KWR-hH-9No"/>
+                                    <constraint firstAttribute="bottom" secondItem="lWI-2X-ToF" secondAttribute="bottom" constant="8" id="vDe-99-GHd"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="onS-at-ddW">
+                                <rect key="frame" x="0.0" y="270" width="414" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="q7M-hl-4fN"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="R5a-C2-ga2" firstAttribute="top" secondItem="i65-yA-O9q" secondAttribute="bottom" constant="4" id="0v5-gO-KrB"/>
-                            <constraint firstItem="gqK-d5-j2U" firstAttribute="top" secondItem="R5a-C2-ga2" secondAttribute="bottom" constant="4" id="2PS-MM-MPY"/>
-                            <constraint firstItem="oj2-9Y-O61" firstAttribute="leading" secondItem="enh-NA-9Fy" secondAttribute="leading" constant="10" id="MHl-Cx-6SR"/>
-                            <constraint firstItem="oj2-9Y-O61" firstAttribute="top" secondItem="i65-yA-O9q" secondAttribute="bottom" constant="10" id="YA1-XC-TBI"/>
-                            <constraint firstItem="R5a-C2-ga2" firstAttribute="leading" secondItem="oj2-9Y-O61" secondAttribute="trailing" constant="8" id="YWJ-xy-69n"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="R5a-C2-ga2" secondAttribute="trailing" constant="12" id="oJ4-Wl-C3S"/>
+                            <constraint firstItem="lWI-2X-ToF" firstAttribute="leading" secondItem="zjY-va-XYJ" secondAttribute="leading" id="O7y-qD-u3s"/>
+                            <constraint firstItem="5zZ-9h-xas" firstAttribute="leading" secondItem="zjY-va-XYJ" secondAttribute="leading" id="ZSO-VI-dXY"/>
+                            <constraint firstItem="lWI-2X-ToF" firstAttribute="trailing" secondItem="5zZ-9h-xas" secondAttribute="trailing" id="apI-rY-WqN"/>
                         </constraints>
-                    </view>
-                    <size key="freeformSize" width="414" height="200"/>
+                    </stackView>
+                    <size key="freeformSize" width="414" height="300"/>
                     <connections>
-                        <outlet property="questionTitleLabel" destination="uQZ-Sj-LhA" id="2Ha-N1-3Jq"/>
-                        <outlet property="responseBodyLabel" destination="Kri-kw-OAA" id="JJb-Nz-f8e"/>
-                        <outlet property="responseSubtitleLabel" destination="9CV-c3-S2a" id="Qr3-DV-aG4"/>
-                        <outlet property="stackView" destination="R5a-C2-ga2" id="qsy-Ng-WAj"/>
+                        <outlet property="questionResponseLabel" destination="lWI-2X-ToF" id="jgC-hJ-43o"/>
+                        <outlet property="questionTitleLabel" destination="5zZ-9h-xas" id="TiT-7T-hXg"/>
+                        <outlet property="stackView" destination="Jfe-sz-G5s" id="Q0U-5k-YaK"/>
+                        <outlet property="thumbnailImage" destination="zjY-va-XYJ" id="Weh-XA-JkG"/>
+                        <outlet property="writtenByImageView" destination="zjY-va-XYJ" id="Bf9-Ny-ApE"/>
+                        <outlet property="writtenByLabel" destination="qA7-dW-gG6" id="pgl-9N-Xm8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QWf-nS-zWB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -84,6 +128,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon-question-response" width="512" height="512"/>
+        <image name="writtenByThumbnailPlaceholder" width="200" height="200"/>
+        <namedColor name="primaryTextColor">
+            <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
