--- a/Pear/Controllers/Update User/Basic Info Input/User Political Views Input/UserPoliticalViewsInputViewController.storyboard
+++ b/Pear/Controllers/Update User/Basic Info Input/User Political Views Input/UserPoliticalViewsInputViewController.storyboard
@@ -38,7 +38,7 @@
                                             <action selector="backButtonClicked:" destination="35H-LN-t67" eventType="touchUpInside" id="n1t-mK-oK0"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ethnicity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ZOr-h0-xcA">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Political Views" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ZOr-h0-xcA">
                                         <rect key="frame" x="60" y="8.5" width="294" height="33"/>
                                         <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="24"/>
                                         <nil key="textColor"/>
