--- a/Pear/Controllers/Permissions Pages/Allow Notifications Screen/AllowNotificationsViewController.storyboard
+++ b/Pear/Controllers/Permissions Pages/Allow Notifications Screen/AllowNotificationsViewController.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -96,7 +97,7 @@
                                 <string key="text">We’ll notify you when you receive
 new matches and messages.</string>
                                 <fontDescription key="fontDescription" name="OpenSans-SemiBold" family="Open Sans SemiBold" pointSize="16"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="primaryTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -131,6 +132,9 @@ new matches and messages.</string>
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-icon-notifications" width="512" height="512"/>
+        <image name="onboarding-icon-notifications" width="170.66667175292969" height="170.66667175292969"/>
+        <namedColor name="primaryTextColor">
+            <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
