Animates filters in and out

--- a/Pear/Controllers/Discovery Flow/Discovery Filter Overlay/DiscoveryFilterOverlayViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Discovery Filter Overlay/DiscoveryFilterOverlayViewController.storyboard
@@ -16,7 +16,7 @@
                     <button key="view" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="RfC-Vs-m7o">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.20000000000000001" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <connections>
                             <action selector="overlayButtonClicked:" destination="Ais-sX-OJK" eventType="touchUpInside" id="gqo-Os-2W9"/>
                         </connections>
